# observatoire-ffsnw

./: .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml
data/: competition_inventory.csv
observatoire/: __init__.py  config.py  database.py
reports/: note_participation_2017_2026.md  rapport_decennal_principal_2017_2026_v5.md  rapport_filiere_open_2017_2026_v1.md  rapport_filiere_open_2017_2026_v2.md  rapport_longitudinal_participation_2017_2026_v2.md  rapport_longitudinal_participation_2017_2026_v3.md  rapport_longitudinal_participation_2017_2026_v4.md  rapport_v1_participation_podiums_2017_2026.md
scripts/: analyse_cohorte_entrants_ems_2024.py  analyse_concentration_activite_ems_2023_2025.py  analyse_conversion_ems_resultats_2023_2026.py  analyse_ems_champs_championnats.py  analyse_ems_participations.py  analyse_fidelisation_ems_2023_2025.py  analyse_fidelisation_ems_sexe_age_2023_2025.py  analyse_fidelisation_multidisciplinarite_ems_2024.py  analyse_filiere_open_championnats_2017_2026.py  analyse_fonction_calendrier_open_ems_2023_2025.py  analyse_open_calendrier_ems.py  analyse_parcours_entree_open.py  analyse_persistance_open_cohortes_2018_2025.py  analyse_poids_profils_fidelisation_ems_2023_2025.py  analyse_prolongement_profils_ems_2026.py  analyse_rebond_open_2025.py  analyse_retention_selon_intensite_ems_2023_2025.py  analyse_transitions_age_ems_2023_2025.py  audit_application_aliases_ems_resultats.py  audit_capture_championnat_open_ems_2023_2025.py  audit_continuite_open_senior_2017_2026.py  audit_database.py  audit_identites_championnat_open_2023_2025_v2.py  audit_identites_ems_resultats_2023_2026.py  audit_longitudinal_schema.py  audit_participation.py  audit_perimetre_championnat_open_nationalite_2023_2025.py  audit_persistance_open_u21_fenetre_complete.py  audit_u21_championnats_2017_2026.py  audit_u21_codes_explicites_2017_2022.py  audit_u21_entries_vs_resultats_2017_2026.py  audit_u21_fichiers_bruts_2017_2022.py  build_longitudinal_report_v2.py  build_report_v1.py  build_rider_identity_aliases.py  build_rider_identity_map.py  check_db.py  compare_ems_resultats_championnats_2023_2026.py  compare_ems_resultats_individus_2023_2026.py  (+77 more)
(+1740 files in other folders)
