[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "observatoire-ffsnw"
version = "0.1.0"
description = "Observatoire de la pratique compétitive du ski nautique français"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"

dependencies = [
    "beautifulsoup4>=4.12",
    "certifi>=2026.6",
    "lxml>=5.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.5"
]

[tool.setuptools]
packages = ["observatoire"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"